--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eslint": "^7.24.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
+    "mongoose": "^5.12.8",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
   },
